<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ALogin_ImOperator"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_bemydate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ALogin_ImOperator"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/ALogin_EdLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintLogin" />

        <EditText
            android:id="@+id/ALogin_EdPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/HintPWD"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/ALogin_BtnValider"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="onClickValidate"
            android:text="@string/lab_connect" />
    </LinearLayout>

    <TextView
        android:id="@+id/ALogin_TvCodeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lBtn"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/lBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:onClick="onClickCreateAccount"
        android:text="@string/lab_subscribe"
        android:textColor="@color/colorTheme"
        android:textSize="18sp" />

</RelativeLayout>